--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sticky",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "<Sticky /> component for React",
   "main": "./index",
   "scripts": {
@@ -25,7 +25,7 @@
     "reactify": "^0.14.0"
   },
   "peerDependencies": {
-    "react": "^0.11.1"
+    "react": "0.x"
   },
   "dependencies": {
     "raf": "^2.0.2"
