--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sticky",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "<Sticky /> component for React",
   "main": "./index",
   "scripts": {
@@ -15,6 +15,10 @@
     "Sticky"
   ],
   "author": "Captivation Software",
+  "contributors": [{
+    "name": "Aaron Goin",
+    "email": "aarondgoin@gmail.com"
+  }],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/captivationsoftware/react-sticky/issues"
@@ -26,8 +30,5 @@
   },
   "peerDependencies": {
     "react": "0.x"
-  },
-  "dependencies": {
-    "raf": "^2.0.2"
   }
 }
