--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "contributors": [{
     "name": "Aaron Goin",
     "email": "aarondgoin@gmail.com"
+  },
+  {
+    "name": "Josh Carr",
+    "email": "joshcarr@gmail.com"
   }],
   "license": "MIT",
   "bugs": {
