Updated react-component index keyword

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/captivationsoftware/react-sticky"
   },
   "keywords": [
+    "react-component",
     "React",
     "Sticky"
   ],
