--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-sticky",
   "version": "2.3.0",
-  "description": "<Sticky /> component for React",
+  "description": "Sticky component for React",
   "main": "./sticky",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
