--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sticky component for React",
   "main": "./lib/sticky",
   "scripts": {
-    "prepublish": "browserify --external react -p [minifyify --map sticky.js.map --output ./dist/sticky.js.map --uglify --compress --dead_code--comparisons 0 ] -s Sticky ./lib/sticky.js --debug > ./dist/sticky.min.js",
+    "prepublish": "browserify --no-bundle-external -p [minifyify --map sticky.js.map --output ./dist/sticky.js.map --uglify --compress --dead_code--comparisons 0 ] -s Sticky ./lib/sticky.js --debug > ./dist/sticky.min.js",
     "test": "mocha --compilers js:babel/register"
   },
   "repository": {
