--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sticky component for React",
   "main": "./lib/sticky",
   "scripts": {
-    "prepublish": "browserify --no-bundle-external -p [minifyify --map sticky.js.map --output ./dist/sticky.js.map --uglify --compress --dead_code--comparisons 0 ] -s Sticky ./lib/sticky.js --debug > ./dist/sticky.min.js",
+    "prepublish": "browserify --no-bundle-external -t [ exposify --expose [ --react React ] ] -p [minifyify --map sticky.js.map --output ./dist/sticky.js.map --uglify --compress --dead_code--comparisons 0 ] -s Sticky ./lib/sticky.js --debug > ./dist/sticky.min.js",
     "test": "mocha --compilers js:babel/register"
   },
   "repository": {
@@ -48,6 +48,7 @@
     "babel": "^5.8.21",
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
+    "exposify": "^0.5.0",
     "jsdom": "6.x",
     "lodash": "^3.10.1",
     "minifyify": "^7.0.5",
