--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-sticky",
   "version": "4.0.0",
   "description": "Sticky component for React",
-  "main": "./lib/sticky",
+  "main": "./lib",
   "scripts": {
-    "prepublish": "browserify --no-bundle-external -t [ exposify --expose [ --react React --react-dom ReactDOM ] ] -p [minifyify --map sticky.js.map --output ./dist/sticky.js.map --uglify --compress --dead_code--comparisons 0 ] -s Sticky ./lib/sticky.js --debug > ./dist/sticky.min.js",
+    "prepublish": "browserify --no-bundle-external -t babelify -t [ exposify --expose [ --react React --react-dom ReactDOM ] ] -p [minifyify --map index.js.map --output ./dist/sticky.js.map --uglify --compress --dead_code--comparisons 0 ] -s Sticky ./lib --debug > ./dist/sticky.min.js",
     "test": "mocha --compilers js:babel/register"
   },
   "repository": {
@@ -46,6 +46,9 @@
   },
   "devDependencies": {
     "babel": "^5.8.21",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
     "exposify": "^0.5.0",
