--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-  "presets": ["es2015", "react"],
-  "plugins": [
-    "transform-object-assign",
-    "add-module-exports"
-  ]
+  "env": {
+    "development": {
+      "presets": ["es2015", "react"],
+      "plugins": [
+        "transform-object-assign",
+        "add-module-exports"
+      ]
+    }
+  }
 }
