--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib",
   "scripts": {
     "prepublish": "browserify -u react -u react-dom -t babelify -t [ exposify --expose [ --react React --react-dom ReactDOM ] ] -p [minifyify --map index.js.map --output ./dist/sticky.js.map --uglify --compress --dead_code--comparisons 0 ] -s ReactSticky ./lib --debug > ./dist/sticky.min.js",
-    "test": "mocha --compilers js:babel/register"
+    "test": "NODE_ENV=test mocha --compilers js:babel/register"
   },
   "repository": {
     "type": "git",
@@ -56,7 +56,7 @@
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
     "exposify": "^0.5.0",
-    "jsdom": "6.x",
+    "jsdom": "8.0.4",
     "lodash": "^3.10.1",
     "minifyify": "^7.0.5",
     "mocha": "^2.2.5",
