--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "env": {
     "development": {
-      "presets": ["es2015", "react"],
+      "presets": ["es2015", "react", "stage-0"],
       "plugins": [
         "transform-object-assign",
         "add-module-exports"
