--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "jsdom": "8.0.4",
     "mocha": "^2.2.5",
     "react-addons-test-utils": "^0.14.0",
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14"
   }
