--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/captivationsoftware/react-sticky"
+    "url": "https://github.com/maliss/react-sticky"
   },
   "keywords": [
     "react-component",
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/captivationsoftware/react-sticky/issues"
   },
-  "homepage": "https://github.com/captivationsoftware/react-sticky",
+  "homepage": "https://github.com/maliss/react-sticky",
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0"
