--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "chai": "^3.2.0",
     "jsdom": "8.0.4",
     "mocha": "^2.2.5",
-    "react-addons-test-utils": "^0.14.0 || ^15.0.0",
+    "prop-types": "^15.5.8",
     "react": "^0.14.0 || ^15.0.0",
+    "react-addons-test-utils": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14"
