--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sticky",
-  "version": "6.0.0",
+  "version": "6.0.0-beta.1",
   "description": "Sticky component for React",
   "main": "lib/index.js",
   "scripts": {
