--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile": "babel src --loose --out-dir lib",
     "start": "webpack --watch",
     "prepublish": "npm run clean && npm run compile",
-    "test": "mocha --compilers js:babel-core/register test/unit"
+    "test": "mocha test/setup.js test/spec/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
   "license": "MIT",
   "homepage": "https://github.com/captivationsoftware/react-sticky",
   "dependencies": {
-    "prop-types": "^15.5.8"
+    "prop-types": "^15.5.8",
+    "raf": "^3.3.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
@@ -37,12 +38,12 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "chai": "^3.2.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.8.2",
     "jsdom": "8.0.4",
-    "mocha": "^2.2.5",
+    "mocha": "^2.4.5",
     "react": "^15.5.4",
-    "react-addons-test-utils": "^0.14.0 || ^15.0.0",
-    "react-dom": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
     "rimraf": "^2.5.2",
     "webpack": "^2.2.0"
   }
