--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sticky",
-  "version": "6.0.0-beta.3",
+  "version": "6.0.0-beta.4",
   "description": "Sticky component for React",
   "main": "lib/index.js",
   "scripts": {
@@ -27,8 +27,8 @@
     "raf": "^3.3.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0"
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.1",
