--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "raf": "^3.3.0"
   },
   "peerDependencies": {
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react": ">=15",
+    "react-dom": ">=15"
   },
   "devDependencies": {
     "babel-cli": "^6.23.1",
