--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "demos:start": "webpack-dev-server --watch",
     "demos:build": "NODE_ENV=production webpack -p",
     "prepublish": "npm run clean && npm run compile",
+    "prepare": "npm run clean && npm run compile",
     "test": "mocha test/setup.js test/spec/*.js"
   },
   "repository": {
