--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "demos:build": "NODE_ENV=production webpack -p",
     "prepublish": "npm run prepare",
     "prepare": "npm run clean && npm run compile",
-    "test": "mocha test/setup.js test/spec/*.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,13 +24,9 @@
   "author": "Captivation Software",
   "license": "MIT",
   "homepage": "https://github.com/captivationsoftware/react-sticky",
-  "dependencies": {
-    "prop-types": "^15.5.8",
-    "raf": "^3.3.0"
-  },
   "peerDependencies": {
-    "react": ">=15",
-    "react-dom": ">=15"
+    "react": ">=16.6",
+    "react-dom": ">=16.6"
   },
   "devDependencies": {
     "babel-cli": "^6.23.1",
@@ -40,12 +36,13 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "chai": "^4",
-    "enzyme": "^2.8.2",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "jest": "^23.6.0",
+    "jest-environment-jsdom-global": "^1.1.0",
     "jsdom": "8.0.4",
-    "mocha": "^5",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^15.5.4",
     "rimraf": "^2.5.2",
