babel-register has been plucked out into it's own package

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.0",
     "chai": "^4",
     "enzyme": "^2.8.2",
