--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "homepage": "https://github.com/captivationsoftware/react-sticky",
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "prop-types": "^15.5.8",
     "raf": "^3.3.0"
   },
@@ -36,6 +37,7 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
