--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "homepage": "https://github.com/captivationsoftware/react-sticky",
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "prop-types": "^15.5.8",
     "raf": "^3.3.0"
   },
@@ -33,13 +34,14 @@
     "react-dom": ">=15"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.1",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "chai": "^4",
     "enzyme": "^2.8.2",
     "jsdom": "8.0.4",
