--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sticky",
+  "name": "fb-react-sticky",
   "version": "6.0.3",
   "description": "Sticky component for React",
   "main": "lib/index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/captivationsoftware/react-sticky"
+    "url": "https://github.com/filoblu/react-sticky"
   },
   "keywords": [
     "react-component",
@@ -23,7 +23,7 @@
   ],
   "author": "Captivation Software",
   "license": "MIT",
-  "homepage": "https://github.com/captivationsoftware/react-sticky",
+  "homepage": "https://github.com/filoblu/react-sticky",
   "dependencies": {
     "@babel/runtime": "^7.3.1",
     "prop-types": "^15.5.8",
