--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sticky",
+  "name": "@twigeducation/react-sticky",
   "version": "6.0.3",
   "description": "Sticky component for React",
   "main": "lib/index.js",
