--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "homepage": "https://github.com/captivationsoftware/react-sticky",
   "dependencies": {
     "@babel/runtime": "^7.3.1",
-    "prop-types": "^15.5.8",
-    "raf": "^3.3.0"
+    "prop-types": "^15.5.8"
   },
   "peerDependencies": {
     "react": ">=15",
@@ -46,6 +45,7 @@
     "enzyme": "^2.8.2",
     "jsdom": "8.0.4",
     "mocha": "^5",
+    "raf": "^3.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.2.2",
